[package]
name = "ssal-commitment"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = { version = "0.3.0", default-features = false }
ark-std = { version = "0.3.0", default-features = false }
ark-ff = { version = "0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false, features=["parallel"] }
ark-poly-commit = { version = "^0.3.0", default-features = false, features=["parallel"] }

ark-bls12-377 = { version = "0.3.0", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "0.3.0", default-features = false, features = ["curve"] }
ark-bn254 = { version = "0.3.0", default-features = false, features = ["curve"] }

ssal-core = { path = "../ssal-core" }