[package]
name = "ssal-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
bincode = "1.3.3"
public-ip = "0.2.2"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["json"] }
rocksdb = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
toml = "0.8.12"
tower-http = { version = "0.5.1", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"