[package]
name = "ssal-sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0.0", features = ["abigen", "rustls", "ws", "ethers-solc"] }
ssal-commitment = { path = "../ssal-commitment" }
ssal-core = { path = "../ssal-core" }
ssal-database = { path = "../ssal-database" }